--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,17 @@ header{
 margin: 50px;
 display: flex;
 justify-content: center;
+position: relative;
+}
+header{
+  position: sticky;
+  top: 35px;
+  bottom: 25px;
 }
 section{
  display: grid;
  grid-template-columns:repeat(10, 1fr);
- grid-template-rows: repeat(4, 1fr);
+ grid-template-rows: repeat(4, 130px);
 }
 .titles{
   display: flex;
@@ -34,7 +40,19 @@ section{
 .section1{
   grid-area: 2/3/2/9;
   display: flex;
-  justify-content: last baseline;
+}
+.section1btns{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+}
+.bone, .btwo , .bthree{
+  color: white;
+  background-color: blue;
+  padding: 5px 25px 5px 25px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .section1 h2{
  margin-right: 150px;
@@ -48,3 +66,60 @@ section{
 .sub1 , .count1{
   margin-right: 15px;
 }
+.section2{
+  grid-area: 3/3/3/9;
+  display: flex;
+  margin-top: 20px;
+  justify-content: last baseline;
+}
+.section2 h2{
+  margin-right: 150px;
+ }
+ .heart2{
+  margin-right: 160px;
+ }
+ .section2btns{
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+}
+.calc2{
+  display: flex;
+  margin-top: 10px;
+}
+.sub2 , .count2{
+  margin-right: 15px;
+}
+.section3{
+   grid-area: 4/3/4/9;
+   display: flex;
+   align-items: center;
+   justify-content: last baseline;
+}
+.section3 h2{
+  margin-right: 150px;
+  height: 100px;
+}
+.heart3{
+  margin-right: 160px;
+  padding-bottom: 70px;
+}
+.calc3{
+  display: flex;
+  margin-top: 10px ;
+}
+.section3btns{
+  display: flex;
+  flex-direction: column;
+} 
+.sub3 , .count3{
+  margin-right: 15px;
+}
+footer{
+  padding-left: 250px;
+  padding-bottom: 20px;
+}
+
+
+
+
